scripts/nullaway/wpi/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8.txt
../original/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/ResourceBundle.java:33: warning: [dep-ann] deprecated item is not annotated with @Deprecated
public @interface ResourceBundle {
        ^
../wpi/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/FuzzyMap.java:25: error: [NullAway] returning @Nullable expression from method with @NonNull return type
                return map.get(name);
                ^
    (see http://t.uber.com/nullaway )
../wpi/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/FuzzyMap.java:25: error: [NullAway] dereferenced expression map is @Nullable
                return map.get(name);
                          ^
    (see http://t.uber.com/nullaway )
../wpi/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/FuzzyMap.java:27: error: [NullAway] dereferenced expression map is @Nullable
                for (IKey c : map.keySet()) {
                                 ^
    (see http://t.uber.com/nullaway )
../wpi/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/FuzzyMap.java:34: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../wpi/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/FuzzyMap.java:41: error: [NullAway] dereferenced expression map is @Nullable
        for (IKey c : map.keySet()) {
                         ^
    (see http://t.uber.com/nullaway )
../wpi/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/FuzzyMap.java:56: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return result;
        ^
    (see http://t.uber.com/nullaway )
../wpi/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/JCommander.java:452: error: [NullAway] dereferenced expression pd.getObject() is @Nullable
            Parameters p = pd.getObject().getClass().getAnnotation(Parameters.class);
                                         ^
    (see http://t.uber.com/nullaway )
../wpi/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/JCommander.java:464: error: [NullAway] dereferenced expression pd.getObject() is @Nullable
            Parameters p = pd.getObject().getClass().getAnnotation(Parameters.class);
                                         ^
    (see http://t.uber.com/nullaway )
../wpi/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/JCommander.java:666: error: [NullAway] dereferenced expression m_defaultProvider is @Nullable
            String def = m_defaultProvider.getDefaultValueFor(optionName);
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/JCommander.java:715: error: [NullAway] dereferenced expression pd.getParameterized() is @Nullable
                            Class<?> fieldType = pd.getParameterized().getType();
                                                                      ^
    (see http://t.uber.com/nullaway )
../wpi/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/JCommander.java:789: error: [NullAway] dereferenced expression m_fields.get(parameterDescription.getParameterized()) is @Nullable
                m_fields.get(parameterDescription.getParameterized()).setAssigned(true);
                                                                     ^
    (see http://t.uber.com/nullaway )
../wpi/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/JCommander.java:978: error: [NullAway] dereferenced expression jc is @Nullable
        jc.usage(out, indent);
          ^
    (see http://t.uber.com/nullaway )
../wpi/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/JCommander.java:1135: error: [NullAway] dereferenced expression description is @Nullable
        String[] words = description.split(" ");
                                    ^
    (see http://t.uber.com/nullaway )
../wpi/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/JCommander.java:1204: error: [NullAway] dereferenced expression pd.getParameterized() is @Nullable
        return convertValue(pd.getParameterized(), pd.getParameterized().getType(), value);
                                                                        ^
    (see http://t.uber.com/nullaway )
../wpi/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/JCommander.java:1213: error: [NullAway] dereferenced expression parameterized is @Nullable
        Parameter annotation = parameterized.getParameter();
                                            ^
    (see http://t.uber.com/nullaway )
../wpi/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/JCommander.java:1234: error: [NullAway] passing @Nullable parameter '(Class) elementType' where @NonNull is required
            if (converterClass == null && Enum.class.isAssignableFrom((Class) elementType)) {
                                                                      ^
    (see http://t.uber.com/nullaway )
../wpi/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/JCommander.java:1260: error: [NullAway] dereferenced expression listConverter is @Nullable
                        result = listConverter.convert(value);
                                              ^
    (see http://t.uber.com/nullaway )
../wpi/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/JCommander.java:1267: error: [NullAway] dereferenced expression converter is @Nullable
                    result = converter.convert(value);
                                      ^
    (see http://t.uber.com/nullaway )
../wpi/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/JCommander.java:1289: error: [NullAway] dereferenced expression converter is @Nullable
            result.add(converter.convert(param));
                                ^
    (see http://t.uber.com/nullaway )
../wpi/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/JCommander.java:1298: error: [NullAway] dereferenced expression converterClass is @Nullable
        Constructor<IStringConverter<?>>[] ctors = (Constructor<IStringConverter<?>>[]) converterClass.getDeclaredConstructors();
                                                                                                      ^
    (see http://t.uber.com/nullaway )
../wpi/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/ParameterDescription.java:298: error: [NullAway] passing @Nullable parameter 'value' where @NonNull is required
            validator.newInstance().validate(name, value);
                                                   ^
    (see http://t.uber.com/nullaway )
../wpi/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/Parameterized.java:32: error: [NullAway] assigning @Nullable expression to @NonNull field
        m_wrappedParameter = wp;
                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/Parameterized.java:33: error: [NullAway] assigning @Nullable expression to @NonNull field
        m_method = method;
                 ^
    (see http://t.uber.com/nullaway )
../wpi/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/Parameterized.java:34: error: [NullAway] assigning @Nullable expression to @NonNull field
        m_field = field;
                ^
    (see http://t.uber.com/nullaway )
../wpi/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/Parameterized.java:38: error: [NullAway] assigning @Nullable expression to @NonNull field
        m_parametersDelegate = pd;
                             ^
    (see http://t.uber.com/nullaway )
../wpi/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/WrappedParameter.java:23: error: [NullAway] assigning @Nullable expression to @NonNull field
        m_dynamicParameter = p;
                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/WrappedParameter.java:87: error: [NullAway] dereferenced expression value is @Nullable
            String sv = value.toString();
                             ^
    (see http://t.uber.com/nullaway )
../wpi/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/internal/JDK6Console.java:16: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.console = console;
                     ^
    (see http://t.uber.com/nullaway )
../wpi/urlead5353366_Zeldon_BigData_Class_tgz-pJ8-LocalTestsJ8/src/com/beust/jcommander/internal/JDK6Console.java:17: error: [NullAway] dereferenced expression console is @Nullable
        Method writerMethod = console.getClass().getDeclaredMethod("writer", new Class<?>[0]);
                                     ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
29 errors
1 warning
